add superkey controller and superkey service class
