# lib/sources/api/bulk_assembly.rb
@@ -1,79 +1,0 @@
-module Sources
-  module Api
-    module BulkAssembly
-      class << self
-        def bulk_create(sources:, endpoints:, applications:, authentications:)
-          Source.transaction do
-            {}.tap do |output|
-              output[:sources] = create_sources(sources)
-              output[:endpoints] = create_endpoints(endpoints, output)
-              output[:applications] = create_applications(applications, output)
-              output[:authentications] = create_authentications(authentications, output)
-            end
-          rescue => e
-            Rails.logger.error("Error bulk processing from payload: Sources: #{sources}, Endpoints: #{endpoints}, Applications: #{applications}, Authentications: #{authentications}. Error: #{e}")
-
-            raise
-          end
-        end
-
-        def create_sources(sources)
-          sources&.map do |source|
-            srct = SourceType.select(:id).find_by(:name => source.delete(:type)).id
-            Source.create!(source.merge!(:source_type_id => srct))
-          end
-        end
-
-        def create_endpoints(endpoints, resources)
-          endpoints&.map do |endpoint|
-            src = find_resource(resources, :sources, endpoint.delete(:source_name))
-            Endpoint.create!(endpoint.merge!(:source_id => src.id))
-          end
-        end
-
-        def create_applications(applications, resources)
-          applications&.map do |app|
-            src = find_resource(resources, :sources, app.delete(:source_name))
-            appt = get_application_type(app.delete(:type))
-
-            ::Application.create!(app.merge!(:source_id => src.id, :application_type_id => appt.id))
-          end
-        end
-
-        def create_authentications(authentications, resources)
-          authentications&.map do |auth|
-            ptype = auth.delete(:resource_type)
-            parent = case ptype
-                     when "source"
-                       find_resource(resources, :sources, auth.delete(:resource_name))
-                     when "endpoint"
-                       find_resource(resources, :endpoints, auth.delete(:resource_name), :host)
-                     when "application"
-                       appt = get_application_type(auth.delete(:resource_name))
-                       find_resource(resources, :applications, appt, :application_type)
-                     end
-
-            Authentication.create!(auth.merge!(:resource => parent)).tap do |newauth|
-              # create the application_authentication relation if the parent was an application.
-              ApplicationAuthentication.create!(:authentication => newauth, :application => parent) if ptype == "application"
-            end
-          end
-        end
-
-      private
-
-        def find_resource(resources, rtype, rname, field = :name)
-          resources[rtype].detect { |resource| resource.send(field) == rname }.tap do |found|
-            raise ActiveRecord::ActiveRecordError, "no applicable #{rtype} for #{rname}" if found.nil?
-          end
-        end
-
-        def get_application_type(type)
-          ApplicationType.all.detect { |apptype| apptype.name.match?(type) }.tap do |found|
-            raise ActiveRecord::ActiveRecordError, "no applicable application type found for #{type}" if found.nil?
-          end
-        end
-    end
-    end
-  end
-end
